[package]
name = "dlt-kraken"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kraken"

[dependencies]
memmap = "0.7.0"
paste = "*"
regex = "1.7.0"
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.5.10"
clap = { version = "4.1.1", features = ["derive"] }